feat: simplify API
